--- a/blazar-reservation-splitter/Chart.yaml
+++ b/blazar-reservation-splitter/Chart.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v2
 name: blazar-reservation-splitter
 description: A Helm chart for Blazar Reservation Splitter
@@ -12,7 +13,11 @@ keywords:
   - metrics
   - reservations
 maintainers:
-  - name: 
+  - name: Rackspace Technology
 home: https://github.com/rackerlabs/genestack
 sources:
   - https://github.com/rackerlabs/genestack-images
+dependencies:
+  - name: helm-toolkit
+    repository: file://../helm-toolkit
+    version: ">= 0.1.0"
