fix: OSPC-1881: updated dependencies repo url

--- a/blazar-reservation-splitter/Chart.yaml
+++ b/blazar-reservation-splitter/Chart.yaml
@@ -19,5 +19,5 @@ sources:
   - https://github.com/rackerlabs/genestack-images
 dependencies:
   - name: helm-toolkit
-    repository: file://../helm-toolkit
+    repository: https://tarballs.opendev.org/openstack/openstack-helm-infra
     version: ">= 0.1.0"
