fix: OSPC-1881: updating target events to 'lease.event.start_lease'

--- a/blazar-reservation-splitter/values.yaml
+++ b/blazar-reservation-splitter/values.yaml
@@ -111,7 +111,7 @@ rabbitmq:
 
 # Events to intercept from Blazar
 targetEvents:
-  - start_lease
+  - lease.event.start_lease
 
 # Additional environment variables
 extraEnv: []
